@@ -1,0 +1,55 @@
+<?php
+/**
+ * SimpleComplex PHP Config
+ * @link      https://github.com/simplecomplex/php-config
+ * @copyright Copyright (c) 2017 Jacob Friis Mathiasen
+ * @license   https://github.com/simplecomplex/php-utils/blob/master/LICENSE (MIT License)
+ */
+declare(strict_types=1);
+
+namespace SimpleComplex\Config;
+
+/**
+ * Wrapped environment variable configuration object.
+ *
+ * @see EnvVarConfig
+ *
+ * @package SimpleComplex\Config
+ */
+class EnvSectionedConfig extends SectionedWrapper
+{
+    /**
+     * Reference to first object instantiated via the getInstance() method,
+     * no matter which parent/child class the method was/is called on.
+     *
+     * @var EnvSectionedConfig
+     */
+    protected static $instance;
+
+    /**
+     * First object instantiated via this method, disregarding class called on.
+     *
+     * @param mixed ...$constructorParams
+     *
+     * @return EnvSectionedConfig
+     *      static, really, but IDE might not resolve that.
+     */
+    public static function getInstance(...$constructorParams)
+    {
+        if (!static::$instance) {
+            static::$instance = new static(...$constructorParams);
+        }
+        return static::$instance;
+    }
+
+
+    // SectionedWrapper.--------------------------------------------------------
+
+    /**
+     * @param string $name
+     */
+    public function __construct($name = 'environment')
+    {
+        parent::__construct(EnvVarConfig::getInstance($name), '__');
+    }
+}
